hphp/hack/test/typecheck/const_attribute/redeclare_from_const.php.exp
File "redeclare_from_const.php", line 4, characters 37-38:
This property is __Const (Typing[4204])
File "redeclare_from_const.php", line 5, characters 32-33:
This property is not __Const
